src/objects/OrderApi__Transaction_Line__c.object
<CustomObject>
    <description>Transaction Lines track the debits and credits associated with Transactions.</description>
    <fields>
        <fullName>OrderApi__Activation_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be activated is calculated based on conditions set on the related Subscription Plan and can be manually over-ridden if &quot;Auto Calculate Activation Date&quot; is unchecked.</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Calculate_Activation_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>** System Calculated Override ** Valid if the Transaction Order Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</description>
        <inlineHelpText>** System Calculated Override ** Valid if the Transaction Line is related to a &quot;Subscription&quot; Item. When checked, the system will automatically calculate the &quot;Activation Date&quot; based on conditions set on the selected &quot;Subscription Plan&quot;. Defaults checked.</inlineHelpText>
        <label>Auto Calculate Activation Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Business group will auto populate, if not defined on entry, to the running user&apos;s business group (assigned in custom settings).</description>
        <inlineHelpText>**System Calculated/Override** Business group will auto populate, if not defined on entry, to the running user&apos;s business group (assigned in custom settings).</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The credit amount for the transaction. Must be zero if the debit is not equal to zero.</description>
        <inlineHelpText>The credit amount for the transaction. Must be zero if the debit is not equal to zero.</inlineHelpText>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Date__c</fullName>
        <description>**System Calculated** The value of the Date field on the parent Transaction.</description>
        <formula>OrderApi__Transaction__r.OrderApi__Date__c</formula>
        <inlineHelpText>**System Calculated** The value of the Date field on the parent Transaction.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Debit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The debit amount for the transaction. Must be zero if the credit is not equal to zero.</description>
        <inlineHelpText>The debit amount for the transaction. Must be zero if the credit is not equal to zero.</inlineHelpText>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__End_Date__c</fullName>
        <description>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</description>
        <inlineHelpText>** System Calculated Override Conditionally Required ** The date the Subscription will be ended is calculated based on conditions set on the related Subscription Plan and Activation Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** The GL Account associated with the Transaction Line.</description>
        <inlineHelpText>**Required** The GL Account associated with the Transaction Line.</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override**  The source Invoice Line record that generates the transaction line.  The transaction line record inherits the Revenue GL Account related to the Item on the source Invoice Line record</description>
        <inlineHelpText>**System Calculated/Override**  The source Invoice Line record that generates the transaction line.  The transaction line record inherits the Revenue GL Account related to the Item on the source Invoice Line record</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override**  The source Invoice record that generates the transaction line.  The transaction line record inherits the Accounts Receivable GL Account specified on the source Invoice record</description>
        <inlineHelpText>**System Calculated/Override**  The source Invoice record that generates the transaction line.  The transaction line record inherits the Accounts Receivable GL Account specified on the source Invoice record</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Override ** Link to the related Item Class.</description>
        <inlineHelpText>** System Calculated / Override ** Link to the related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Transaction Line</relationshipLabel>
        <relationshipName>Transaction_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the related Item record. Derived from the related Invoice Line (only populates on receivable transactions).</description>
        <inlineHelpText>**System Calculated/Override** Link to the related Item record. Derived from the related Invoice Line (only populates on receivable transactions).</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Memo__c</fullName>
        <description>**System Calculated/Override** The memo will auto-populate with information from the transaction line source from the source record memo or description.</description>
        <inlineHelpText>**System Calculated/Override** The memo will auto-populate with information from the transaction line source from the source record memo or description.</inlineHelpText>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The source Receipt Detail record that generates the transaction line.</description>
        <inlineHelpText>**System Calculated/Override** The source Receipt Detail record that generates the transaction line.</inlineHelpText>
        <label>Receipt Line</label>
        <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The source Receipt record that generates the transaction line.  The transaction line record inherits the GL account of the source Receipt record.</description>
        <inlineHelpText>**System Calculated/Override** The source Receipt record that generates the transaction line.  The transaction line record inherits the GL account of the source Receipt record.</inlineHelpText>
        <label>Receipt</label>
        <referenceTo>OrderApi__Receipt__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Sales Order Line (where applicable).</description>
        <inlineHelpText>**System Calculated** Link to related Sales Order Line (where applicable).</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Subscription Line.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Subscription Line.</inlineHelpText>
        <label>Subscription Line</label>
        <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
        <relationshipLabel>Transaction Lines</relationshipLabel>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Transaction Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</description>
        <inlineHelpText>** Conditionally Required ** Link to the related plan that controls Activation and Expiration dates related to any Subscription Item. Required when the Transaction Line is linked to a Item that is the child of a &quot;Subscription&quot; Item Class.</inlineHelpText>
        <label>Subscription Plan</label>
        <referenceTo>OrderApi__Subscription_Plan__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to the related Subscription.</description>
        <inlineHelpText>** System Calculated Override ** Link to the related Subscription.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Transaction Lines</relationshipLabel>
        <relationshipName>Transaction_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Transaction__c</fullName>
        <description>**Required** All Transaction Lines must be associated with a parent Transaction.</description>
        <inlineHelpText>**Required** All Transaction Lines must be associated with a parent Transaction.</inlineHelpText>
        <label>Transaction</label>
        <referenceTo>OrderApi__Transaction__c</referenceTo>
        <relationshipName>Transaction_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>**System Calculated** The value of the Type field on the parent Transaction.</description>
        <formula>TEXT(OrderApi__Transaction__r.OrderApi__Type__c)</formula>
        <inlineHelpText>**System Calculated** The value of the Type field on the parent Transaction.</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Transaction Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Transaction Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>